examples/test/testpolicy16755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16755
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key46: value14
      key7: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value11
          key21: value45
      podSelector:
        matchLabels:
          key16: value4
          key12: value44
          key25: value3
